<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cluz</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="inital_Time">0 min, 0 sec</string>
    <string name="title_activity_database_interface">DatabaseInterface</string>
    <string name="title_hint">Title</string>
    <string-array name="privacy_spinner_options">
        <item>Public</item>
        <item>Private</item>
    </string-array>
    <string name="add">Post</string>
    <string name="name">Name</string>
    <string name="message">Text</string>
    <string name="refresh">Refresh</string>
    <string name="newmessage">Add a Comment</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Save</item>
        <item >Brush</item>
        <item >Discard</item>
        <item >About</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_save</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>
