<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/almostblack"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/newmessage"
            android:textSize="25sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="#ffffff"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/namebox"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:ems="10"
                android:textColor="#ffffff"
                android:inputType="textNoSuggestions"
                >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/message"
                android:textColor="#ffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/messagebox"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:ems="10"
                android:textColor="#ffffff"
                android:inputType="textNoSuggestions"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right" >

            <Button
                android:id="@+id/refreshbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@color/lightPurple"
                android:onClick="reload"
                android:padding="5dp"
                android:text="@string/refresh"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/postbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lightPurple"
                android:onClick="post"
                android:padding="5dp"
                android:text="@string/add"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
    <FrameLayout
        android:background="@color/lightPurple"
        android:layout_width="fill_parent"
        android:layout_height="3dp" >
    </FrameLayout>

    <ListView
        android:id="@+id/currentmessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="5"
        android:padding="10dp"
        android:background="#ffffff"
        >

    </ListView>



</LinearLayout>